Outfit tables scroll with sticky header and no scroll frame (but partially buggy on horizontal scrolling)

--- a/public/app.css
+++ b/public/app.css
@@ -10,6 +10,12 @@
     cursor: pointer;
 }
 
+table.reagent-table thead th {
+    position: sticky !important;
+    top: 0;
+    background-color: white;
+}
+
 p.italic {
     font-style: italic;
 }
